--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
 
     "autoprefixer": "^10.4.16",
 
-    "babel-loader": "^9.1.3",
-
     "clean-webpack-plugin": "^4.0.0",
 
     "css-loader": "^6.8.1",
@@ -57,6 +55,8 @@
   },
 
   "dependencies": {
+
+    "@fortawesome/fontawesome-free": "^6.5.1",
 
     "@popperjs/core": "^2.11.8",
 
