--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 
     "autoprefixer": "^10.4.16",
 
+    "babel-loader": "^9.1.3",
+
     "clean-webpack-plugin": "^4.0.0",
 
     "css-loader": "^6.8.1",
@@ -62,7 +64,9 @@
 
     "bootstrap": "^5.3.2",
 
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+
+    "swiper": "^11.0.5"
 
   }
 
